OZ-446: Enable JSON log output (#44)