@@ -6,11 +6,27 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 #
 
-FROM eclipse-temurin:17-jre-jammy
+FROM amazoncorretto:17-alpine AS corretto-jdk
+
+RUN apk add --no-cache binutils && \
+    rm -rf /var/cache/apk/*
+RUN jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /jre
+
+FROM alpine:3.21
 LABEL maintainer="ozone-his.com"
+ENV JAVA_HOME=/jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+RUN apk add -U unzip && rm -rf /var/cache/apk/*
+COPY --from=corretto-jdk /jre $JAVA_HOME
+
 # Copy the application zip file
 COPY app/target/*.zip eip-client.zip
-RUN apt-get update && apt-get install -y unzip
 RUN unzip eip-client.zip -d . && rm eip-client.zip
 ## Create the following directories:
 ## /config - for configuration files
